--- a/FrontEnd/termi-project/package.json
+++ b/FrontEnd/termi-project/package.json
@@ -30,9 +30,11 @@
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.0",
     "react-i18next": "^12.0.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.4",
     "react-scripts": "^2.1.3",
     "react-snow-effect": "^1.2.0",
