--- a/FrontEnd/termi-project/package.json
+++ b/FrontEnd/termi-project/package.json
@@ -42,6 +42,7 @@
     "react-snow-effect": "^1.2.0",
     "react-snowfall": "^1.2.1",
     "react-spring": "^9.6.1",
+    "react-toastify": "^9.1.1",
     "react-tsparticles": "^2.6.0",
     "react-use": "^17.4.0",
     "seedrandom": "^3.0.5",
