--- a/FrontEnd/termi-project/package.json
+++ b/FrontEnd/termi-project/package.json
@@ -28,6 +28,8 @@
     "i18next-http-backend": "^2.0.2",
     "jquery": "^3.6.2",
     "js-cookie": "^3.0.1",
+    "js-file-download": "^0.4.12",
+    "json2csv": "^5.0.7",
     "node-sass": "^8.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -48,6 +50,7 @@
     "seedrandom": "^3.0.5",
     "short-id": "^0.0.0",
     "shortid": "^2.2.16",
+    "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
     "tsparticles-preset-snow": "^2.6.0",
     "validator": "^13.7.0",
