--- a/FrontEnd/termi-project/package.json
+++ b/FrontEnd/termi-project/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.41.0",
     "react-i18next": "^12.0.0",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
     "react-scripts": "^2.1.3",
     "react-snow-effect": "^1.2.0",
@@ -47,6 +48,8 @@
     "react-toastify": "^9.1.1",
     "react-tsparticles": "^2.6.0",
     "react-use": "^17.4.0",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "seedrandom": "^3.0.5",
     "short-id": "^0.0.0",
     "shortid": "^2.2.16",
