--- a/FrontEnd/termi-project/package.json
+++ b/FrontEnd/termi-project/package.json
@@ -13,9 +13,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@zaneray/css-browser-selector": "^0.8.1",
+    "add-to-homescreen-react-js": "^1.0.1",
     "antd": "^5.1.1",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.2.0",
     "cli": "^1.0.1",
     "css-browser-selector": "^0.6.5",
     "dotenv": "^16.0.3",
@@ -45,9 +47,11 @@
     "react-snow-effect": "^1.2.0",
     "react-snowfall": "^1.2.1",
     "react-spring": "^9.6.1",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.1",
     "react-tsparticles": "^2.6.0",
     "react-use": "^17.4.0",
+    "recharts": "^2.3.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "seedrandom": "^3.0.5",
@@ -57,6 +61,7 @@
     "swiper": "^8.4.5",
     "tsparticles-preset-snow": "^2.6.0",
     "validator": "^13.7.0",
+    "victory": "^36.6.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
