--- a/FrontEnd/termi-project/package.json
+++ b/FrontEnd/termi-project/package.json
@@ -2,6 +2,7 @@
   "name": "termi-project",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
