--- a/FrontEnd/termi-project/package.json
+++ b/FrontEnd/termi-project/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@loadable/component": "^5.15.2",
+    "@react-spring/web": "^9.7.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +22,7 @@
     "chart.js": "^4.2.0",
     "cli": "^1.0.1",
     "css-browser-selector": "^0.6.5",
+    "d3-ease": "^3.0.1",
     "dotenv": "^16.0.3",
     "flag-icons": "^6.6.6",
     "font-awesome": "^4.7.0",
@@ -45,13 +47,17 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
     "react-scripts": "^2.1.3",
+    "react-share": "^4.4.1",
     "react-snow-effect": "^1.2.0",
     "react-snowfall": "^1.2.1",
+    "react-speech": "^1.0.2",
+    "react-speech-kit": "^3.0.1",
     "react-spring": "^9.6.1",
     "react-table": "^7.8.0",
-    "react-toastify": "^9.1.1",
     "react-tsparticles": "^2.6.0",
+    "react-unity-webgl": "^9.4.0",
     "react-use": "^17.4.0",
+    "reactjs-popup": "^2.0.5",
     "recharts": "^2.3.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
@@ -60,7 +66,7 @@
     "shortid": "^2.2.16",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
-    "tsparticles-preset-snow": "^2.6.0",
+    "typeface-roboto": "^1.1.13",
     "validator": "^13.7.0",
     "victory": "^36.6.8",
     "web-vitals": "^2.1.4"
