Added in register new layout new stepper steps in register new form and validation notification system api with achievment and messages using react-toastify appwide

--- a/FrontEnd/termi-project/package.json
+++ b/FrontEnd/termi-project/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.3",
     "flag-icons": "^6.6.6",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^10.12.7",
     "gatsby": "^5.3.2",
     "getavataaars": "^1.0.0",
     "i18next": "^22.0.8",
@@ -41,6 +42,7 @@
     "react-bootstrap": "^2.6.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-form-stepper": "^2.0.3",
     "react-hook-form": "^7.41.0",
     "react-i18next": "^12.0.0",
     "react-icons": "^4.7.1",
@@ -51,9 +53,10 @@
     "react-snow-effect": "^1.2.0",
     "react-snowfall": "^1.2.1",
     "react-speech": "^1.0.2",
-    "react-speech-kit": "^3.0.1",
     "react-spring": "^9.6.1",
+    "react-star-ratings": "^2.3.0",
     "react-table": "^7.8.0",
+    "react-toastify": "^8.1.0",
     "react-tsparticles": "^2.6.0",
     "react-unity-webgl": "^9.4.0",
     "react-use": "^17.4.0",
