--- a/FrontEnd/termi-project/.env
+++ b/FrontEnd/termi-project/.env
@@ -3,7 +3,7 @@ PORT=8081
 
 React_App_Search = http://dir.y2022.kinneret.cc:7013/search
 React_App_BaseURL = http://dir.y2022.kinneret.cc:7013/
-React_App_StorageURL = http://dir.y2022.kinneret.cc:7013/
+React_App_StorageURL = https://y2022.s3.amazonaws.com/
 React_App_Register = http://dir.y2022.kinneret.cc:7013/register
 React_App_Login = http://dir.y2022.kinneret.cc:7013/login
 
