--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.329.0",
+    "aws-sdk": "^2.1374.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
@@ -21,6 +23,8 @@
     "mongodb": "^4.12.1",
     "mongoose": "^6.7.4",
     "mongoose-encryption": "^2.1.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "swagger-jsdoc": "^6.2.7",
