--- a/FrontEnd/termi-project/package.json
+++ b/FrontEnd/termi-project/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@loadable/component": "^5.15.2",
+    "@react-oauth/google": "^0.11.0",
     "@react-spring/web": "^9.7.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -23,9 +24,11 @@
     "cli": "^1.0.1",
     "css-browser-selector": "^0.6.5",
     "d3-ease": "^3.0.1",
+    "diff-match-patch": "^1.0.5",
     "dotenv": "^16.0.3",
     "flag-icons": "^6.6.6",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^10.12.8",
     "gatsby": "^5.3.2",
     "getavataaars": "^1.0.0",
     "i18next": "^22.0.8",
@@ -41,19 +44,19 @@
     "react-bootstrap": "^2.6.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-form-stepper": "^2.0.3",
     "react-hook-form": "^7.41.0",
     "react-i18next": "^12.0.0",
     "react-icons": "^4.7.1",
+    "react-lazyload": "^3.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
     "react-scripts": "^2.1.3",
     "react-share": "^4.4.1",
-    "react-snow-effect": "^1.2.0",
-    "react-snowfall": "^1.2.1",
     "react-speech": "^1.0.2",
-    "react-speech-kit": "^3.0.1",
-    "react-spring": "^9.6.1",
+    "react-star-ratings": "^2.3.0",
     "react-table": "^7.8.0",
+    "react-toastify": "^8.1.0",
     "react-tsparticles": "^2.6.0",
     "react-unity-webgl": "^9.4.0",
     "react-use": "^17.4.0",
@@ -65,7 +68,7 @@
     "short-id": "^0.0.0",
     "shortid": "^2.2.16",
     "styled-components": "^5.3.6",
-    "swiper": "^8.4.5",
+    "swiper": "^9.2.4",
     "typeface-roboto": "^1.1.13",
     "validator": "^13.7.0",
     "victory": "^36.6.8",
