--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -1,3 +1,55 @@
+# name: CI
+
+# on: [push]
+
+# jobs:
+#   test:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - name: Checkout repository
+#       uses: actions/checkout@v2
+
+#     - name: Set up Python
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: 3.x
+
+#     - name: Install dependencies
+#       run: pip install --upgrade pip
+          
+#     - name: Install Robot Framework and SeleniumLibrary
+#       run: pip install robotframework robotframework-seleniumlibrary
+      
+#     - name: Install Selenium
+#       run: pip install selenium==4.9.1
+     
+#     - name: Install webdriver_manager
+#       run: pip install webdrivermanager
+      
+#     - name: setup-chromedriver
+#       uses: nanasess/setup-chromedriver@v2.0.0
+
+#     - name: Set up Chrome environment variables
+#       run: |
+#         echo "DISABLE_SANDBOX=true" >> $GITHUB_ENV
+
+#     - name: Wait for Chrome to start
+#       run: sleep 5  # Adjust the wait time as needed
+
+    
+#     - name: Check running processes
+#       run: ps -ef | grep chrome
+
+#     - name: Run Robot Framework tests
+#       run: robot --outputdir results robot_automation/robot_basics
+      
+#     - name: Archive test results
+#       uses: actions/upload-artifact@v2
+#       with:
+#         name: Test Results
+#         path: results
+
 name: CI
 
 on: [push]
@@ -7,45 +59,48 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.x
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.x
 
-    - name: Install dependencies
-      run: pip install --upgrade pip
-          
-    - name: Install Robot Framework and SeleniumLibrary
-      run: pip install robotframework robotframework-seleniumlibrary
+      - name: Install dependencies
+        run: pip install --upgrade pip
+
+      - name: Install Robot Framework and SeleniumLibrary
+        run: pip install robotframework robotframework-seleniumlibrary
+
+      - name: Install Chrome browser and ChromeDriver
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y unzip
+          wget -N https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo dpkg -i google-chrome-stable_current_amd64.deb
+          CHROMEDRIVER_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE)
+          wget -N "https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip"
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/local/bin/
+          sudo chown root:root /usr/local/bin/chromedriver
+          sudo chmod +x /usr/local/bin/chromedriver
+
+      - name: Install webdriver_manager
+        run: pip install --upgrade webdriver_manager
+
+      - name: Set up Chrome environment variables
+        run: |
+          echo "DISABLE_SANDBOX=true" >> $GITHUB_ENV
+
+      - name: Wait for Chrome to start
+        run: sleep 5  # Adjust the wait time as needed
+
+      - name: Run Robot Framework tests
+        run: robot --outputdir results robot_automation/robot_basics
       
-    - name: Install Selenium
-      run: pip install selenium==4.9.1
-     
-    - name: Install webdriver_manager
-      run: pip install webdrivermanager
-      
-    - name: setup-chromedriver
-      uses: nanasess/setup-chromedriver@v2.0.0
-
-    - name: Set up Chrome environment variables
-      run: |
-        echo "DISABLE_SANDBOX=true" >> $GITHUB_ENV
-
-    - name: Wait for Chrome to start
-      run: sleep 5  # Adjust the wait time as needed
-
-    
-    - name: Check running processes
-      run: ps -ef | grep chrome
-
-    - name: Run Robot Framework tests
-      run: robot --outputdir results robot_automation/robot_basics
-      
-    - name: Archive test results
-      uses: actions/upload-artifact@v2
-      with:
-        name: Test Results
-        path: results
+      - name: Archive test results
+        uses: actions/upload-artifact@v2
+        with:
+          name: Test Results
+          path: results
