--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -88,6 +88,9 @@ jobs:
 
       - name: Install webdriver_manager
         run: pip install --upgrade webdriver_manager
+        
+      - name: Install Selenium
+        run: pip install selenium==4.9.1
 
       - name: Set up Chrome environment variables
         run: |
