--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -99,8 +99,12 @@ jobs:
       - name: Wait for Chrome to start
         run: sleep 5  # Adjust the wait time as needed
       - name: Check running processes
-        run: ps -ef | grep chrome
+        run: |
+        ps -ef | grep chrome
+        netstat -tuln | grep 9515  # Verify if ChromeDriver is listening on port 9515
         
+      - name: List files in /usr/local/bin directory
+        run: ls -la /usr/local/bin
       - name: Run Robot Framework tests
         run: robot --outputdir results robot_automation/robot_basics
       
