--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -44,16 +44,23 @@ jobs:
 
       - name: Run Robot Framework tests
         run: |
-          robot --outputdir logs robot_automation/robot_basics
+          robot --outputdir robot_automation/logs robot_automation/robot_basics > robot_output.txt 2> robot_errors.txt
           if [ $? -eq 0 ]; then  # Check the exit code of the previous command
             echo -e "\e[32mTests passed!\e[0m"  # Set text color to green for pass
           else
             echo -e "\e[31mTests failed!\e[0m"  # Set text color to red for fail
           fi
 
-      
+      - name: Display Robot Framework output
+        run: |
+          cat robot_output.txt
+
+      - name: Display Robot Framework errors
+        run: |
+          cat robot_errors.txt
+
       - name: Archive test results
         uses: actions/upload-artifact@v2
         with:
           name: Test Results
-          path: logs
+          path: robot_automation/logs
