--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -44,12 +44,14 @@ jobs:
 
       - name: Run Robot Framework tests
         run: |
-          robot --outputdir robot_automation/logs robot_automation/robot_basics > robot_output.txt 2> robot_errors.txt
-          if [ $? -eq 0 ]; then  # Check the exit code of the previous command
-            echo -e "\e[32mTests passed!\e[0m"  # Set text color to green for pass
-          else
-            echo -e "\e[31mTests failed!\e[0m"  # Set text color to red for fail
-          fi
+          for test_case in $(ls robot_automation/robot_basics/*.robot); do
+            robot --outputdir robot_automation/logs "${test_case}" >> robot_output.txt 2>> robot_errors.txt
+            if [ $? -eq 0 ]; then
+              echo -e "\e[32mTest '${test_case}' passed!\e[0m"
+            else
+              echo -e "\e[31mTest '${test_case}' failed!\e[0m"
+            fi
+          done
 
       - name: Display Robot Framework output
         run: |
