--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install Firefox browser
         run: sudo apt-get install -y firefox
-     
+
       - name: Install GeckoDriver
         run: |
           GECKODRIVER_VERSION=$(curl -sS https://api.github.com/repos/mozilla/geckodriver/releases/latest | grep -oP '"tag_name": "\K(.*)(?=")')
@@ -34,7 +34,7 @@ jobs:
 
       - name: Install webdriver_manager
         run: pip install --upgrade webdriver_manager
-        
+
       - name: Install Selenium
         run: pip install selenium==4.9.1
 
@@ -44,12 +44,12 @@ jobs:
 
       - name: Run Robot Framework tests
         run: |
-          for test_case in $(ls robot_automation/robot_basics/*.robot); do
-            robot --outputdir robot_automation/logs "${test_case}" >> robot_output.txt 2>> robot_errors.txt
+          for test_case in robot_automation/robot_basics/*.robot; do
+            robot --outputdir robot_automation/logs "$test_case" >> robot_output.txt 2>> robot_errors.txt
             if [ $? -eq 0 ]; then
-              echo -e "\e[32mTest '${test_case}' passed!\e[0m"
+              echo -e "\e[32mTest '$test_case' passed!\e[0m"
             else
-              echo -e "\e[31mTest '${test_case}' failed!\e[0m"
+              echo -e "\e[31mTest '$test_case' failed!\e[0m"
             fi
           done
 
