--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -44,14 +44,13 @@ jobs:
 
       - name: Run Robot Framework tests
         run: |
-          robot --outputdir robot_automation/logs robot_automation/robot_basics
+          robot --outputdir robot_automation/logs --log robot_automation/logs/log.html robot_automation/robot_basics
           if [ $? -eq 0 ]; then  # Check the exit code of the previous command
             echo -e "\e[32mTests passed!\e[0m"  # Set text color to green for pass
           else
             echo -e "\e[31mTests failed!\e[0m"  # Set text color to red for fail
           fi
 
-      
       - name: Archive test results
         uses: actions/upload-artifact@v2
         with:
