--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -51,6 +51,17 @@ jobs:
             echo -e "\e[31mTests failed!\e[0m"  # Set text color to red for fail
           fi
 
+      - name: Display Robot Framework logs
+        run: |
+          echo -e "\nTest Results:\n"
+          cat robot_automation/logs/log.html | awk -v RS='</tr>' -F '</td>' '{
+            if (match($0, "<td class=\"fail\">")) {
+              printf "\e[31m%s\e[0m\n", $2
+            } else if (match($0, "<td class=\"pass\">")) {
+              printf "\e[32m%s\e[0m\n", $2
+            }
+          }'
+          
       - name: Archive test results
         uses: actions/upload-artifact@v2
         with:
