--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -45,10 +45,10 @@ jobs:
       - name: Run Robot Framework tests
         run: |
           robot --outputdir robot_automation/logs --log robot_automation/logs/log.html robot_automation/robot_basics
-          if [ $? -eq 0 ]; then
-            echo -e "\e[32mTests passed!\e[0m"
+          if [ $? -eq 0 ]; then  # Check the exit code of the previous command
+            echo -e "\e[32mTests passed!\e[0m"  # Set text color to green for pass
           else
-            echo -e "\e[31mTests failed!\e[0m"
+            echo -e "\e[31mTests failed!\e[0m"  # Set text color to red for fail
           fi
 
       - name: Display Robot Framework logs
@@ -62,13 +62,10 @@ jobs:
             }
           }'
           
-      - name: Store Robot Framework logs
+      - name: Commit and push logs
         run: |
-          mkdir -p ${{ github.workspace }}/robot_automation/logs
-          cp robot_automation/logs/* ${{ github.workspace }}/robot_automation/logs
-          cd ${{ github.workspace }}
-          git config --global user.name "Your Name"
-          git config --global user.email "your-email@example.com"
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
           git add robot_automation/logs
           git commit -m "Add Robot Framework logs"
           git push
