Deleting current geckolog files

--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -1,9 +1,6 @@
 name: CI
 
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 jobs:
   test:
@@ -26,7 +23,7 @@ jobs:
 
       - name: Install Firefox browser
         run: sudo apt-get install -y firefox
-
+     
       - name: Install GeckoDriver
         run: |
           GECKODRIVER_VERSION=$(curl -sS https://api.github.com/repos/mozilla/geckodriver/releases/latest | grep -oP '"tag_name": "\K(.*)(?=")')
@@ -37,7 +34,7 @@ jobs:
 
       - name: Install webdriver_manager
         run: pip install --upgrade webdriver_manager
-
+        
       - name: Install Selenium
         run: pip install selenium==4.9.1
 
@@ -45,21 +42,31 @@ jobs:
         run: |
           echo "MOZ_HEADLESS=1" >> $GITHUB_ENV
 
+      - name: Delete existing geckodriver logs
+        run: |
+          rm -f robot_automation/logs/geckodriver*.log
+
       - name: Run Robot Framework tests
         run: |
-          geckodriver --log=robot_automation/logs/geckodriver.log --log-file=robot_automation/logs/geckodriver.log --log-file-override
+          geckodriver --log=robot_automation/logs/geckodriver.log
           robot --outputdir robot_automation/logs --log robot_automation/logs/log.html robot_automation/robot_basics
-          if [ $? -eq 0 ]; then
-            echo -e "\e[32mTests passed!\e[0m"
+          if [ $? -eq 0 ]; then  # Check the exit code of the previous command
+            echo -e "\e[32mTests passed!\e[0m"  # Set text color to green for pass
           else
-            echo -e "\e[31mTests failed!\e[0m"
+            echo -e "\e[31mTests failed!\e[0m"  # Set text color to red for fail
           fi
 
       - name: Display Robot Framework logs
         run: |
           echo -e "\nTest Results:\n"
-          cat robot_automation/logs/output.xml | awk -F'"' '/failures="|errors="|tests=/{gsub(/<\/?[^>]+(>|$)/, "", $2);print "\033[31m"$2"\033[0m"} /<test id=|<status status=/{split($0, a, "\"");print "\033[32m"$2"\033[0m"}'
-
+          cat robot_automation/logs/log.html | awk -v RS='</tr>' -F '</td>' '{
+            if (match($0, "<td class=\"fail\">")) {
+              printf "\e[31m%s\e[0m\n", $2
+            } else if (match($0, "<td class=\"pass\">")) {
+              printf "\e[32m%s\e[0m\n", $2
+            }
+          }'
+          
       - name: Commit and push logs
         run: |
           git config --local user.email "actions@github.com"
