--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -44,11 +44,11 @@ jobs:
 
       - name: Delete existing geckodriver logs
         run: |
-          rm -f robot_automation/logs/geckodriver*.log
+          rm -f robot_automation/logs/robot_automation/logs/geckodriver*.log
 
       - name: Run Robot Framework tests
         run: |
-          robot --outputdir robot_automation/logs --log robot_automation/logs/robot_automation/logs/log.html robot_automation/robot_basics
+          robot --outputdir robot_automation/logs --log robot_automation/logs/log.html robot_automation/robot_basics
           if [ $? -eq 0 ]; then  # Check the exit code of the previous command
             echo -e "\e[32mTests passed!\e[0m"  # Set text color to green for pass
           else
@@ -58,13 +58,7 @@ jobs:
       - name: Display Robot Framework logs
         run: |
           echo -e "\nTest Results:\n"
-          cat robot_automation/logs/robot_automation/logs/log.html | awk -v RS='</tr>' -F '</td>' '{
-            if (match($0, "<td class=\"fail\">")) {
-              printf "\e[31m%s\e[0m\n", $2
-            } else if (match($0, "<td class=\"pass\">")) {
-              printf "\e[32m%s\e[0m\n", $2
-            }
-          }'
+          cat robot_automation/logs/output.xml | awk -F'"' '/failures="|errors="|tests=/{gsub(/<\/?[^>]+(>|$)/, "", $2);print "\033[31m"$2"\033[0m"} /<test id=|<status status=/{split($0, a, "\"");print "\033[32m"$2"\033[0m"}'
           
       - name: Commit and push logs
         run: |
