--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -27,6 +27,7 @@
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
+    "openai": "^3.3.0",
     "swagger-jsdoc": "^6.2.7",
     "swagger-ui-express": "^4.6.0"
   }
